--- a/manifest.json
+++ b/manifest.json
@@ -21,7 +21,7 @@
   
   "content_scripts": [
 	{
-      "matches": ["*://*.netflix.com/*", "*://*.hulu.com/*", "*://*.amazon.com/*", "*://*.youtube.com/*", "*://*.peacocktv.com/*", "*://play.max.com/*", "*://app.plex.tv/*"],
+      "matches": ["*://*.netflix.com/*", "*://*.hulu.com/*", "*://*.amazon.com/*", "*://*.youtube.com/*", "*://*.peacocktv.com/*", "*://play.max.com/*", "*://app.plex.tv/*", "*://www.paramountplus.com/*"],
       "js": ["vulguard.js"]
     }
   ],
